# taskbara

./: .env.example  .gitignore  README.md  pyproject.toml
src/taskbara/: __init__.py  bot.py  config.py  db.py  formatting.py  handlers.py  hashing.py  logging_setup.py  parsing.py
tests/: test_db.py  test_formatting.py  test_hashing.py  test_parsing.py
