[project]
name = "taskbara"
version = "0.1.0"
description = "Minimalist Telegram task tracker bot"
readme = "README.md"
authors = [
    { name = "Aleksooo", email = "semenchuk-aleksey@yandex.ru" }
]
requires-python = ">=3.11"
dependencies = [
    "aiogram>=3.29.0",
    "aiosqlite>=0.22.1",
    "python-dotenv>=1.2.2",
]

[project.scripts]
taskbara = "taskbara.bot:run"

[build-system]
requires = ["uv_build>=0.11.11,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
